# octarine

./: .appveyor.yml  .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  multiboot.ld  realmode.asm  stage1.ld
arch/: CMakeLists.txt
arch/i386/: CMakeLists.txt
arch/i386/boot/: CMakeLists.txt  linker.ld  multiboot.asm  multiboot.ld  stage1.asm
arch/i386/include/machine/: CPU.hpp  Context.hpp
arch/i386/kernel/: CMakeLists.txt  IDT.hpp  PIC.hpp
cmake/: asm.cmake  config.cmake  libcxx.cmake  toolcfg.cmake  toolchain-clang.cmake
contrib/: CMakeLists.txt
contrib/libcxx/: CMakeLists.txt  __config_site.hpp  apply_patches.cmake.in  site_config.patch
contrib/tlsf/: CMakeLists.txt  tlsf.c  tlsf.h
docs/: CMakeLists.txt  Doxyfile.in
include/: multiboot.h  stdint.h
include/io/: Device.hpp  KeyCodes.h  Keyboard.hpp
include/sys/: cdefs.h  types.h
kernel/: CMakeLists.txt  IRQManager.cpp  IRQManager.hpp  InterruptHandler_asm.asm  Keyboard.cpp  MBootMain.cpp  PS2Keyboard.cpp  Scheduler.cpp  Thread.cpp  Thread.hpp  atkeyboard.cpp  atkeyboard.h  cxx.cpp  driveio.cpp  gdt.mac  keyboard.h  klib_support.cpp  main.cpp  mm.cpp  mm.h  panic.cpp  registers.h  registers.mac  terminal.cpp  terminal.h  util.cpp  util.hpp
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: CMakeLists.txt  CPU.cpp  IDT.cpp  IDT.hpp  InterruptHandler_asm.asm  PIC.cpp  PIC.hpp  bioscall.h  cpumode.asm  e9dump.hpp  portio.h
kernel/include/: IRQManager.hpp  Octarine.hpp  Scheduler.hpp  Thread.hpp
klib/: CMakeLists.txt  cxxabi.cpp  memset.c
klib/include/: List.hpp  klib.h  klib_new.hpp  string.h
klib/include/klib/intrusive/: List.hpp
klib/string/: memchr.c  memcmp.c  memcpy.c  memset.c  strcat.c  strcpy.c  strlen.c
src/boot/: CMakeLists.txt  gdt.asm  multiboot.asm  stage2.asm
src/kernel/: CMakeLists.txt  InterruptManager.cpp  InterruptManager.hpp  Keyboard.cpp  PS2Keyboard.cpp  Scheduler.cpp  Thread.hpp  bioscall.asm  cpumode.asm  cxx.cpp  driveio.cpp  gdt.mac  idt.h  main.cpp  mm.cpp  mm.h  pic.cpp  portio.h  registers.h  terminal.cpp  terminal.h  util.hpp
src/klib/: CMakeLists.txt  memcpy.c  memset.c
src/klib/include/: klib.h
tools/: CMakeLists.txt  mbinfo.cpp
